--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,94 @@
 .page {
   min-width: 1100px;
-  /* we don't know how to make mobile versions of websites yet, */
-  /* so here we've set a minimum page width */
   max-width: 1600px;
-  /* here we've set a maximum page width */
   margin: 0 auto;
-  /* this ensures that all content is centered on screens wider than 1600px */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", "sans-serif";
+  
 }
+
+
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* parameters for the header section */
+  background-color: #1F1F1F ;
+  flex-direction:row ;
+  display: flex;
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
-.header__square-pic {
+.logo_place_header{
+  width: 154px;
+  height: 31px;
+  background-image: url('../images/logo_place_header.png');
+  z-index: 1;
+  top: 30px;
+  left: 64px;
+  position: absolute;
+  
+  
+}
+
+.h1{
+  display: flex;
+  width: 730px;
+  left: 64px;
+  z-index: 1;
+  height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  margin: center;
+  
+}
+
+.h2{
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  position: absolute;
+  z-index: 1;
+  height: 25px;
+  font-size: 18px;
+  font-weight:normal;
+  display: flex;
+
+}
+
+.mas-informacion__link{
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.mas-informacion__link_active{
+
+  font-size: 18px;
+  text-decoration: underline;
+  text-decoration: #2F80ED ;
+}
+
+
+.square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  background-color: #2F80ED  ;
+  padding-top: 64px;
+  background-size: 568px 568px;
+  background-position: top;}
+  
+
+.header-image{
+  height: 608px;
+  width: 756px;
+  position: absolute;
 }
 
-/* including elements with key-value modifiers */
+
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
