--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -12,9 +21,11 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  background-color: #1F1F1F ;
-  flex-direction:row ;
   display: flex;
+  background-color: #F2F2F2 ;
+  position: relative;
+  margin-bottom: 100px;
+  overflow: hidden;
 }
 
 .logo_place_header{
@@ -29,61 +40,193 @@
   
 }
 
-.h1{
+.header__title{
   display: flex;
   width: 730px;
-  left: 64px;
-  z-index: 1;
-  height: 96px;
+  margin-left: 64px;
+  line-height: 96px;
   font-size: 102px;
   font-weight: bold;
-  margin: center;
+  align-items: center;
   
 }
 
-.h2{
+.header__subtitle{
   left: 64px;
   bottom: 30px;
   width: 388px;
   position: absolute;
-  z-index: 1;
-  height: 25px;
+  line-height: 25px;
   font-size: 18px;
   font-weight:normal;
-  display: flex;
 
 }
 
-.mas-informacion__link{
+.header__link{
   font-size: 18px;
   text-decoration: none;
 }
 
-.mas-informacion__link_active{
 
-  font-size: 18px;
-  text-decoration: underline;
-  text-decoration: #2F80ED ;
+.header__main-illustration{
+  height: 608px;
+  width: 756px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
-
-.square-pic {
+.header__square {
   height: 568px;
   width: 568px;
   position: absolute;
   background-color: #2F80ED  ;
-  padding-top: 64px;
-  background-size: 568px 568px;
-  background-position: top;}
-  
+  top: 64px;
+  right: 0;
+  z-index: 0; 
+  }
 
-.header-image{
-  height: 608px;
-  width: 756px;
-  position: absolute;
+.two-columns{
+  display: flex;
+  justify-content: space-between;
+  right: 0;
+  gap: 50px;
+  margin-bottom: 100px;
 }
 
+.two-columns__brief{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2F80ED;
+  width: 175px;
+  margin-top: 0;
+  margin-left: 100px;
+}
 
+.two-columns__main-text{
+  min-width: 784px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  width: 80%;
+
+}
+
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+  width: 80%;
+}
+
+.span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.digits{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.section__title{
+  width: 60%;
+  line-height: 1.5px;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  margin: 100px  auto;
+  
+}
+
+.section__subtitle{
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin: 20px auto 60px auto;
+
+}
+
+.table{
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+  
+}
+
+.table__cell{
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+  row-gap: 20px;
+  
+}
+
+.table__heading{
+ line-height: 1.5;
+ font-size: 24px;
+ margin: 0;
+ font-weight: bold;
+
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.table__bot{
+  flex-wrap: wrap;
+  display: flex;
+  
+  
+  
+}
+
+.table__cell-bot{
+  display: flex;
+  width: 250px;
+  flex-direction: row;
+  row-gap: 20px;
+  padding-top: 60px;
+  position: absolute;
+  
+  
+}
+
+.table__heading{
+ line-height: 1.5;
+ font-size: 24px;
+ margin: 0;
+ font-weight: bold;
+ margin: auto auto 20px auto;
+display: flex;
+position: absolute;
+}
+
+.table__text{
+  display: flex;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  margin-bottom: 100px;
+
+
+}
 
 .table__cell_theme_dark {
   width: 200px;
@@ -91,4 +234,3 @@
   margin-right: 0;
   margin-top: 80px;
 }
-
