--- a/styles/style.css
+++ b/styles/style.css
@@ -26,12 +26,12 @@
   position: relative;
   margin-bottom: 100px;
   overflow: hidden;
+  background-position: center;
 }
 
 .logo_place_header{
   width: 154px;
   height: 31px;
-  background-image: url('../images/logo_place_header.png');
   z-index: 1;
   top: 30px;
   left: 64px;
@@ -90,9 +90,12 @@
 .two-columns{
   display: flex;
   justify-content: space-between;
-  right: 0;
+  margin: 0;
+  width: 80%;
   gap: 50px;
-  margin-bottom: 100px;
+  min-width: 784px;
+  
+
 }
 
 .two-columns__brief{
@@ -101,14 +104,14 @@
   font-weight: normal;
   color: #2F80ED;
   width: 175px;
-  margin-top: 0;
-  margin-left: 100px;
+  margin: 0;
 }
 
 .two-columns__main-text{
   min-width: 784px;
   display: flex;
   flex-direction: column;
+  margin: 0;
   row-gap: 30px;
   width: 80%;
 
@@ -138,11 +141,12 @@
 
 .section__title{
   width: 60%;
-  line-height: 1.5px;
+  line-height: 1.5;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
-  margin: 100px  auto;
+  margin: 0;
+  margin-top: 100px;
   
 }
 
@@ -152,7 +156,8 @@
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  margin: 20px auto 60px auto;
+  margin: 0;
+  padding: 20px auto 60px auto;
 
 }
 
@@ -161,7 +166,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  
+  width: 1100px;
+  margin: 60px auto 100px auto;
+  padding: auto;
   
 }
 
@@ -169,7 +176,7 @@
   display: flex;
   width: 250px;
   flex-direction: column;
-  row-gap: 20px;
+  justify-content: flex-start;
   
 }
 
@@ -178,54 +185,66 @@
  font-size: 24px;
  margin: 0;
  font-weight: bold;
-
+ row-gap: 20px;
+ 
 }
 
 .table__text{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
-}
-
-.table__bot{
-  flex-wrap: wrap;
-  display: flex;
-  
-  
-  
-}
-
-.table__cell-bot{
-  display: flex;
-  width: 250px;
-  flex-direction: row;
   row-gap: 20px;
-  padding-top: 60px;
-  position: absolute;
-  
+
+}
+
+.feynman{
+  width: 1100px;
+  background-color: #F2F2F2;
+  position: relative;
   
 }
 
-.table__heading{
- line-height: 1.5;
- font-size: 24px;
- margin: 0;
- font-weight: bold;
- margin: auto auto 20px auto;
-display: flex;
+.feynman__title{
+width: 775px;
+line-height: 1.15;
+font-size: 120px;
+font-weight: bold;
+z-index: 1;
 position: absolute;
+margin: auto;
+
+}
+.feynman__subtitle{
+ line-height: 51px;
+ font-size: 36px;
+ font-weight: normal;
+ z-index: 1;
+ position: absolute;
+ margin: auto;
+
+ 
+}
+.feynman__photo{
+  height: 637px;
+  width: 867px;
+  z-index: 0;
+  display: flex;
+  
 }
 
-.table__text{
-  display: flex;
-  line-height: 1.2;
-  font-size: 18px;
+.feynman__circle{
+  background-color: #2F80ED  ; 
+  z-index: -1;
+}
+
+
+.feynman__link{
+  height: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
   font-weight: normal;
   position: absolute;
-  margin-bottom: 100px;
-
-
 }
 
 .table__cell_theme_dark {
