--- a/styles/style.css
+++ b/styles/style.css
@@ -12,35 +12,30 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: "Helvetica Neue", "Arial", "sans-serif";
-  
 }
-
-
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   display: flex;
-  background-color: #F2F2F2 ;
+  background-color: #f2f2f2;
   position: relative;
   margin-bottom: 100px;
   overflow: hidden;
   background-position: center;
 }
 
-.logo_place_header{
+.logo_place_header {
   width: 154px;
   height: 31px;
   z-index: 1;
   top: 30px;
   left: 64px;
   position: absolute;
-  
-  
 }
 
-.header__title{
+.header__title {
   display: flex;
   width: 730px;
   margin-left: 64px;
@@ -48,27 +43,24 @@
   font-size: 102px;
   font-weight: bold;
   align-items: center;
-  
 }
 
-.header__subtitle{
+.header__subtitle {
   left: 64px;
   bottom: 30px;
   width: 388px;
   position: absolute;
   line-height: 25px;
   font-size: 18px;
-  font-weight:normal;
-
+  font-weight: normal;
 }
 
-.header__link{
+.header__link {
   font-size: 18px;
   text-decoration: none;
 }
 
-
-.header__main-illustration{
+.header__main-illustration {
   height: 608px;
   width: 756px;
   position: absolute;
@@ -81,43 +73,40 @@
   height: 568px;
   width: 568px;
   position: absolute;
-  background-color: #2F80ED  ;
+  background-color: #2f80ed;
   top: 64px;
   right: 0;
-  z-index: 0; 
-  }
+  z-index: 0;
+}
 
-.two-columns{
+.two-columns {
   display: flex;
   justify-content: space-between;
   margin: 0;
   width: 80%;
   gap: 50px;
   min-width: 784px;
-  
-
 }
 
-.two-columns__brief{
+.two-columns__brief {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  color: #2F80ED;
+  color: #2f80ed;
   width: 175px;
   margin: 0;
 }
 
-.two-columns__main-text{
+.two-columns__main-text {
   min-width: 784px;
   display: flex;
   flex-direction: column;
   margin: 0;
   row-gap: 30px;
   width: 80%;
-
 }
 
-.two-columns__paragraph{
+.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -125,21 +114,21 @@
   width: 80%;
 }
 
-.span-accent{
+.span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
   margin: 0;
 }
 
-.digits{
+.digits {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
 }
 
-.section__title{
+.section__title {
   width: 60%;
   line-height: 1.5;
   font-size: 60px;
@@ -147,10 +136,9 @@
   text-align: center;
   margin: 0;
   margin-top: 100px;
-  
 }
 
-.section__subtitle{
+.section__subtitle {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -158,10 +146,9 @@
   text-align: center;
   margin: 0;
   padding: 20px auto 60px auto;
-
 }
 
-.table{
+.table {
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -169,76 +156,73 @@
   width: 1100px;
   margin: 60px auto 100px auto;
   padding: auto;
-  
 }
 
-.table__cell{
+.table__cell {
   display: flex;
   width: 250px;
   flex-direction: column;
   justify-content: flex-start;
-  
 }
 
-.table__heading{
- line-height: 1.5;
- font-size: 24px;
- margin: 0;
- font-weight: bold;
- row-gap: 20px;
- 
+.table__heading {
+  line-height: 1.5;
+  font-size: 24px;
+  margin: 0;
+  font-weight: bold;
+  row-gap: 20px;
 }
 
-.table__text{
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   row-gap: 20px;
-
 }
 
-.feynman{
-  width: 1100px;
-  background-color: #F2F2F2;
+.feynman {
+  width: 100%;
+  font-family: "Helvetica Neue";
   position: relative;
-  
+  height: 900px;
+  z-index: 2;
 }
 
-.feynman__title{
-width: 775px;
-line-height: 1.15;
-font-size: 120px;
-font-weight: bold;
-z-index: 1;
-position: absolute;
-margin: auto;
-
+.feynman__title {
+  width: 775px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: auto;
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
-.feynman__subtitle{
- line-height: 51px;
- font-size: 36px;
- font-weight: normal;
- z-index: 1;
- position: absolute;
- margin: auto;
-
- 
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: auto;
+  text-align: center;
+  padding-top: 70px;
 }
-.feynman__photo{
+.feynman__photo {
   height: 637px;
   width: 867px;
   z-index: 0;
-  display: flex;
-  
+  position: absolute;
+  bottom: 0;
+  z-index: 0;
+  left: 0;
 }
 
-.feynman__circle{
-  background-color: #2F80ED  ; 
+.feynman__circle {
+  background-color: #2f80ed;
   z-index: -1;
 }
 
-
-.feynman__link{
+.feynman__link {
   height: 50%;
   right: 48px;
   line-height: 51px;
