--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,32 @@
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: "Helvetica Neue", "Arial", "sans-serif";
-  
+  font-family: "Helvetica Neue";
 }
-
-
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   display: flex;
-  background-color: #F2F2F2 ;
+  background-color: #f2f2f2;
   position: relative;
   margin-bottom: 100px;
   overflow: hidden;
   background-position: center;
 }
 
-.logo_place_header{
+.logo_place_header {
   width: 154px;
   height: 31px;
   z-index: 1;
   top: 30px;
   left: 64px;
   position: absolute;
-  
-  
 }
 
-.header__title{
+.header__title {
   display: flex;
   width: 730px;
   margin-left: 64px;
@@ -48,27 +34,24 @@
   font-size: 102px;
   font-weight: bold;
   align-items: center;
-  
 }
 
-.header__subtitle{
+.header__subtitle {
   left: 64px;
   bottom: 30px;
   width: 388px;
   position: absolute;
   line-height: 25px;
   font-size: 18px;
-  font-weight:normal;
-
+  font-weight: normal;
 }
 
-.header__link{
+.header__link {
   font-size: 18px;
   text-decoration: none;
 }
 
-
-.header__main-illustration{
+.header__main-illustration {
   height: 608px;
   width: 756px;
   position: absolute;
@@ -81,43 +64,41 @@
   height: 568px;
   width: 568px;
   position: absolute;
-  background-color: #2F80ED  ;
+  background-color: #2f80ed;
   top: 64px;
   right: 0;
-  z-index: 0; 
-  }
+  z-index: 0;
+}
 
-.two-columns{
+.two-columns {
   display: flex;
   justify-content: space-between;
-  margin: 0;
+  margin: auto;
   width: 80%;
   gap: 50px;
   min-width: 784px;
-  
-
+  justify-content: center;
 }
 
-.two-columns__brief{
+.two-columns__brief {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  color: #2F80ED;
+  color: #2f80ed;
   width: 175px;
   margin: 0;
 }
 
-.two-columns__main-text{
+.two-columns__main-text {
   min-width: 784px;
   display: flex;
   flex-direction: column;
   margin: 0;
   row-gap: 30px;
   width: 80%;
-
 }
 
-.two-columns__paragraph{
+.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -125,21 +106,21 @@
   width: 80%;
 }
 
-.span-accent{
+.span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
   margin: 0;
 }
 
-.digits{
+.digits {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
 }
 
-.section__title{
+.section__title {
   width: 60%;
   line-height: 1.5;
   font-size: 60px;
@@ -147,10 +128,9 @@
   text-align: center;
   margin: 0;
   margin-top: 100px;
-  
 }
 
-.section__subtitle{
+.section__subtitle {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -158,10 +138,9 @@
   text-align: center;
   margin: 0;
   padding: 20px auto 60px auto;
-
 }
 
-.table{
+.table {
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -169,87 +148,224 @@
   width: 1100px;
   margin: 60px auto 100px auto;
   padding: auto;
-  
 }
 
-.table__cell{
+.table__cell {
   display: flex;
   width: 250px;
   flex-direction: column;
   justify-content: flex-start;
-  
 }
 
-.table__heading{
- line-height: 1.5;
- font-size: 24px;
- margin: 0;
- font-weight: bold;
- row-gap: 20px;
- 
+.table__heading {
+  line-height: 1.5;
+  font-size: 24px;
+  margin: 0;
+  font-weight: bold;
+  row-gap: 20px;
 }
 
-.table__text{
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   row-gap: 20px;
-
 }
 
-.feynman{
-  width: 1100px;
-  background-color: #F2F2F2;
+.feynman {
+  width: 100%;
+  background-color: #f2f2f2;
+  font-family: "Helvetica Neue";
+  /* padding-top: 100px; */
+  height: 790px;
   position: relative;
-  
-}
-
-.feynman__title{
-width: 775px;
-line-height: 1.15;
-font-size: 120px;
-font-weight: bold;
-z-index: 1;
-position: absolute;
-margin: auto;
-
-}
-.feynman__subtitle{
- line-height: 51px;
- font-size: 36px;
- font-weight: normal;
- z-index: 1;
- position: absolute;
- margin: auto;
-
- 
-}
-.feynman__photo{
-  height: 637px;
-  width: 867px;
-  z-index: 0;
   display: flex;
-  
+  flex-direction: column;
 }
 
-.feynman__circle{
-  background-color: #2F80ED  ; 
-  z-index: -1;
+.feynman__title {
+  width: 775px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 1;
+  margin: 100px auto 70px auto;
+  text-align: center;
 }
 
-
-.feynman__link{
-  height: 50%;
+.feynman__link {
+  top: 50%;
   right: 48px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   position: absolute;
+  text-decoration: none;
 }
 
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+.feynman__photo {
+  height: 637px;
+  width: 867px;
+  z-index: 0;
+  bottom: 0;
+  left: 0;
+  /* display: flex; */
+  position: absolute;
+}
+
+.feynman__circle {
+  background-color: #2f80ed;
+  z-index: -1;
+}
+
+.kaufman {
+  width: 100%;
+  padding: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  font-family: "Helvetica Neue";
+  position: relative;
+  margin: 0;
+}
+
+.kaufman__triangle {
+  width: 660px;
+  height: 636px;
+  right: -124px;
+  z-index: 0;
+  top: 0;
+  position: absolute;
+}
+
+.kaufman__title_theme_dark {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+
+  margin-top: 90px;
+  text-align: center;
+  color: white;
+  z-index: 1;
+}
+
+.kaufman__subtitle_theme_dark {
+  width: 60%;
+  font-weight: normal;
+  text-align: center;
+  margin: auto;
+  padding-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
+}
+
+.table__theme_dark {
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  width: 1100px;
+  margin-bottom: 90px;
+  justify-content: space-between;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 1;
+  position: relative;
+  margin-top: 80px;
+  row-gap: 80px;
+}
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: auto;
+  /* padding-top: 80px; */
+  flex-direction: column;
+  /* align-items: baseline; */
+  /* justify-content: space-between; */
+  display: flex;
+  gap: 20px;
+}
+
+.table__heading_theme_dark {
+  line-height: 1.5;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer {
+  background-color: black;
+  min-height: 350px;
+  color: white;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  display: flex;
+  position: relative;
+  margin: 0;
+}
+
+.footer__columns {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.footer__column-content-copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  border-style: none;
+  position: absolute;
+  top: 0;
+}
+
+.copyrights__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 0;
+  row-gap: 20px;
+}
+
+.footer__column-cell {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
 }
