--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", "Arial", "sans-serif";
 }
 
 .header {
@@ -119,7 +119,7 @@
   margin-bottom: 100px;
 }
 
-.section__title {
+.section-title {
   width: 60%;
   line-height: 1.5;
   font-size: 60px;
@@ -127,9 +127,10 @@
   text-align: center;
   margin: 0;
   margin-top: 100px;
+  margin-bottom: 20px;
 }
 
-.section__subtitle {
+.section-subtitle {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -174,8 +175,6 @@
 .feynman {
   width: 100%;
   background-color: #f2f2f2;
-  font-family: "Helvetica Neue";
-  /* padding-top: 100px; */
   height: 790px;
   position: relative;
   display: flex;
@@ -217,7 +216,6 @@
   z-index: 0;
   bottom: 0;
   left: 0;
-  /* display: flex; */
   position: absolute;
 }
 
@@ -234,7 +232,6 @@
   flex-direction: column;
   align-items: center;
   background-color: black;
-  font-family: "Helvetica Neue";
   position: relative;
   margin: 0;
 }
@@ -253,7 +250,6 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-
   margin-top: 90px;
   text-align: center;
   color: white;
@@ -289,10 +285,7 @@
   width: 200px;
   color: white;
   margin: auto;
-  /* padding-top: 80px; */
   flex-direction: column;
-  /* align-items: baseline; */
-  /* justify-content: space-between; */
   display: flex;
   gap: 20px;
 }
@@ -325,7 +318,7 @@
 .footer__columns {
   display: flex;
   width: 90%;
-  margin: auto;
+  margin: 60px auto 40px auto;
   justify-content: space-between;
 }
 
