--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   font-family: "Helvetica Neue";
 }
 
-.logo_place_header {
+.logo__place_header {
   width: 154px;
   height: 31px;
   z-index: 1;
@@ -458,7 +458,7 @@
   animation: rotation 20s infinite linear;
 }
 
-.kaufman__title_theme_dark {
+.kaufman-title__theme_dark {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
@@ -470,7 +470,7 @@
   z-index: 1;
 }
 
-.kaufman__subtitle_theme_dark {
+.kaufman-subtitle__theme_dark {
   width: 60%;
   font-weight: normal;
   text-align: center;
