--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   font-family: "Helvetica Neue";
 }
 
-.logo__place_header {
+.logo_place_header {
   width: 154px;
   height: 31px;
   z-index: 1;
@@ -434,6 +434,16 @@
   opacity: 0.2;
 }
 
+.kaufman__triangle {
+  width: 660px;
+  height: 636px;
+  right: -124px;
+  z-index: 0;
+  top: 0;
+  position: absolute;
+  animation: rotation 20s infinite linear;
+}
+
 .kaufman {
   width: 100%;
   padding: auto;
@@ -448,17 +458,7 @@
   padding-top: 90px;
 }
 
-.kaufman__triangle {
-  width: 660px;
-  height: 636px;
-  right: -124px;
-  z-index: 0;
-  top: 0;
-  position: absolute;
-  animation: rotation 20s infinite linear;
-}
-
-.kaufman-title__theme_dark {
+.kaufman-title {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
@@ -470,7 +470,7 @@
   z-index: 1;
 }
 
-.kaufman-subtitle__theme_dark {
+.kaufman-subtitle {
   width: 60%;
   font-weight: normal;
   text-align: center;
@@ -479,6 +479,7 @@
   line-height: 34px;
   font-size: 24px;
   color: white;
+  z-index: 2;
 }
 
 .table__theme_dark {
@@ -490,7 +491,7 @@
   justify-content: space-between;
   margin-right: auto;
   margin-left: auto;
-  z-index: 1;
+  z-index: 3;
   position: relative;
   margin-top: 80px;
   row-gap: 80px;
@@ -502,6 +503,7 @@
   flex-direction: column;
   display: flex;
   gap: 20px;
+  z-index: 4;
 }
 
 .table__heading_theme_dark {
@@ -577,7 +579,7 @@
   position: relative;
 }
 
-.logo_place_footer {
+.logo__place_footer {
   width: 183px;
   height: 35px;
   border-style: none;
