--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   font-family: "Helvetica Neue";
 }
 
-.logo_place_header {
+.logo__place_header {
   width: 154px;
   height: 31px;
   z-index: 1;
@@ -562,12 +562,13 @@
   position: relative;
   margin: 0;
   font-family: "Helvetica Neue";
+  box-sizing: border-box;
 }
 
 .footer__columns {
   display: flex;
   width: 90%;
-  margin: 60px auto 40px auto;
+  margin: auto;
   justify-content: space-between;
 }
 
@@ -575,22 +576,20 @@
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  position: relative;
+  justify-content: space-between;
 }
 
 .logo__place_footer {
   width: 183px;
   height: 35px;
-  border-style: none;
-  position: absolute;
-  top: 0;
+  align-self: flex-start;
 }
 
-.copyrights__author {
+.footer__author {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  bottom: 0;
 }
 
 .footer__column-heading {
@@ -598,10 +597,9 @@
   font-size: 18px;
   font-weight: bold;
   padding: 0;
-  row-gap: 20px;
 }
 
-.footer__column-cell {
+.footer__cell {
   padding: 0;
   margin: 0;
   list-style: none;
