--- a/styles/style.css
+++ b/styles/style.css
@@ -579,7 +579,7 @@
   justify-content: space-between;
 }
 
-.logo__place-footer {
+.logo__place_footer {
   width: 183px;
   height: 35px;
   align-self: flex-start;
