--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@
   text-decoration: none;
 }
 .header__link:hover {
-  background-color: rgb(187, 220, 247);
+  background-color: #f2f2f2;
   transition: 0.7s ease-in-out;
   opacity: 0.2;
 }
@@ -261,7 +261,7 @@
 }
 
 .feynman__link:hover {
-  background-color: rgb(187, 220, 247);
+  background-color: #f2f2f2;
   transition: 0.7s ease-in-out;
   opacity: 0.2;
 }
@@ -429,7 +429,7 @@
 }
 
 .khan__buy-link:hover {
-  background-color: rgb(187, 220, 247);
+  background-color: #f2f2f2;
   transition: 0.7s ease-in-out;
   opacity: 0.2;
 }
@@ -463,7 +463,6 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  margin-top: 90px;
   margin-bottom: 0;
   text-align: center;
   color: white;
@@ -552,6 +551,12 @@
   height: 38px;
 }
 
+.resources__logo-link:hover{
+  background-color: rgb(253, 255, 255);
+  transition: 0.7s ease-in-out;
+  opacity: 0.4;
+}
+
 .footer {
   background-color: black;
   min-height: 350px;
@@ -568,7 +573,7 @@
 .footer__columns {
   display: flex;
   width: 90%;
-  margin: auto;
+  margin: 0 auto;
   justify-content: space-between;
 }
 
@@ -599,7 +604,37 @@
   padding: 0;
 }
 
-.footer__cell {
+.footer__column {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-link{
+font-style: none;
+color: white;
+text-decoration: none;
+}
+
+.footer__column-link:hover{
+  background-color: rgb(15, 41, 63);
+  transition: 0.7s ease-in-out;
+  opacity: 0.4;
+}
+
+.footer__list{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__social-icons{
   padding: 0;
   margin: 0;
   list-style: none;
