--- a/styles/style.css
+++ b/styles/style.css
@@ -464,6 +464,7 @@
   font-size: 60px;
   font-weight: bold;
   margin-bottom: 0;
+  margin-top: 0;
   text-align: center;
   color: white;
   z-index: 1;
