--- a/styles/style.css
+++ b/styles/style.css
@@ -150,12 +150,14 @@
 }
 
 .cards {
-  width: 1100px;
+  width: 920px;
   display: flex;
   margin: 0 auto;
   flex-wrap: wrap;
   row-gap: 60px;
   column-gap: 100px;
+  text-align: center;
+ 
 }
 
 .cards__item {
