--- a/blocks/kaufman/-title_theme_dark/kaufman-title_theme_dark.css
+++ b/blocks/kaufman/-title_theme_dark/kaufman-title_theme_dark.css
@@ -3,6 +3,7 @@
     line-height: 1.15;
     font-size: 60px;
     font-weight: bold;
+    margin-top: 0;
     margin-bottom: 0;
     text-align: center;
     color: white;
