--- a/blocks/techniques/cards/cards.css
+++ b/blocks/techniques/cards/cards.css
@@ -1,8 +1,9 @@
 .cards {
-    width: 1100px;
+    width: 920px;
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
     row-gap: 60px;
     column-gap: 100px;
+    text-align: center;
   }
