--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url(./styles/normalize.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__title/header__title.css);
@@ -76,4 +77,3 @@
 @import url(./blocks/footer/__social-icons/footer__social-icons.css);
 @import url(./blocks/footer/__column-link/footer__column-link.css);
 @import url(./blocks/footer/__column-link:hover/footer__column-link:hover.css);
-
